src/components/Tile.css
.Tile {
  cursor: pointer;
  width: 100%;
  height: 100%;
  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.29);
  overflow: hidden;
  border-radius: 5px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  
}

.TileTitle {
  width: 100%;
  box-sizing: border-box;
  padding: 10px;
  padding-bottom: 0px;
  /* height: 8%; */
  flex-basis: 8%;
  flex-shrink: 0;
  flex-grow: 0;
  z-index: 1;
  background-color: #fff;
  font-size: 40px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.TileTitle div {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #115E67CD;
  padding-bottom: 5px;
  border-bottom: 1px solid #70707033;

}
.TileHandle {
  position: absolute;
  right: 5px;
  top: 9px;
}
.TileHeaderText {
  font-size: 19px;
  font-weight: bold;
}
.TileBody {
  position: relative;
  width: 100%;
  
  height: 92%;
  /* 
  Those flex properties do somehow not work for flex items containing images
  */
  /* flex: 1 1 92%; */
  
  padding: 10px;
  box-sizing: border-box;
  
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

